[gd_scene load_steps=3 format=3 uid="uid://dmos11qvx4oxm"]

[ext_resource type="PackedScene" uid="uid://58c6txyswrfv" path="res://Level/LevelManager/TransitionScreen/S_Transition_Screen.tscn" id="1_q0qtk"]
[ext_resource type="Script" path="res://Level/LevelManager/GD_Level_Manager.gd" id="1_thsif"]

[node name="LevelManager" type="Node3D"]
script = ExtResource("1_thsif")

[node name="TransitionScreen" parent="." instance=ExtResource("1_q0qtk")]

[node name="currentScene" type="Node3D" parent="."]

[node name="ColorRect" type="ColorRect" parent="currentScene"]
offset_right = 640.0
offset_bottom = 360.0
color = Color(0, 0, 0, 1)

[connection signal="transitioned" from="TransitionScreen" to="." method="_on_transition_screen_transitioned"]
